# wechat

./: .gitignore  README.md  design-sandbox-session.md  spec.md  start-mac.sh  start-prod.bat  start.bat  stop.bat
llm-chat/: .env  (+7 more)
llm-chat/backend/: .dockerignore  Dockerfile  README.md  config.py  decrypt_env.py  harness.py  logging_config.py  main.py  memory_manager.py  models.py  ollama_client.py  pyproject.toml  pytest.ini  requirements.txt  test_case.md  test_worker.py
llm-chat/backend/api/: __init__.py  artifacts.py  chat.py  conversations.py  debug.py  tools.py
llm-chat/backend/cache/: base.py  factory.py  redis_cache.py
llm-chat/backend/conversations/: 80a0d43a.json  841c11bb.json  ac061464.json  b7036cbb.json  c35bb8ed.json  c5c4f2e3.json  d8276411.json  f64f3962.json
llm-chat/backend/db/: artifact_store.py  backfill.py  event_store.py  init.sql  message_detail_store.py  migrate.py  models.py  plan_store.py  quant_store.py  redis_state.py  session_store.py  state_machine.py  tool_store.py  usage_store.py  user_store.py
llm-chat/backend/fsm/: __init__.py  plan_step.py  sse_events.py
llm-chat/backend/graph/: __init__.py  agent.py  edges.py  event_types.py  nodes.py  quant_agent.py  runner.py  state.py
llm-chat/backend/graph/nodes/: base.py  cache_node.py  call_model_after_tool_node.py  call_model_node.py  compress_node.py  planner_node.py  reflector_node.py  retrieve_context_node.py  route_node.py  save_response_node.py  vision_node.py
llm-chat/backend/graph/runner/: db_event_batcher.py  dispatcher.py  event_buffer.py  session_registry.py  stream.py  (+1 more)
llm-chat/backend/layers/: context.py  extension.py  longterm.py
llm-chat/backend/llm/: __init__.py  chat.py  client.py  embeddings.py
llm-chat/backend/memory/: __init__.py  compressor.py  context_builder.py  core_memory.py  schema.py  store.py
llm-chat/backend/ppt/: html_preview.py  image_gen.py  renderer.py  script_gen.py  themes.py
llm-chat/backend/prompts/: system.md
llm-chat/backend/quant/: cache_disk.py  cache_warmer.py  config.py  data_adapter.py  provider_registry.py  router.py  service.py  worker.py
llm-chat/backend/rag/: __init__.py  ingestor.py  retriever.py
llm-chat/backend/routers/: admin_router.py  auth_router.py  chat_router.py  conversation_router.py  files_router.py  model_router.py  tool_router.py
llm-chat/backend/sandbox/: __init__.py  context.py  manager.py  worker.py
llm-chat/backend/services/: conversation_service.py
llm-chat/backend/tests/: conftest.py  test_data_adapter_freshness.py  test_fsm.py  test_nodes.py  test_quant_screen.py  test_stream.py
llm-chat/backend/tools/: __init__.py  skill.py
(+91 files in other folders)
