[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-chat-backend"
version = "0.1.0"
description = "本地 LLM 对话后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "httpx==0.28.*",
    "pydantic==2.*",
]

[project.scripts]
start = "main:app"

[tool.setuptools.packages.find]
where = ["."]
