[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-chat-backend"
version = "2.0.0"
description = "本地 LLM 对话后端服务 - LangChain 重构版"
requires-python = ">=3.11"
dependencies = [
    # ── Web 框架 ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",

    # ── LangChain 生态 ──
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-qdrant>=0.2.0",

    # ── LangGraph ──
    "langgraph>=0.3.0",

    # ── MCP ──
    "langchain-mcp-adapters>=0.1.0",

    # ── 向量数据库 ──
    "qdrant-client>=1.9.0",

    # ── 内置工具依赖 ──
    "ddgs>=1.0.0",
]

[project.scripts]
start = "main:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*", "layers*"]
